# test_serde_formats

./: Cargo.toml  README.md
src/: formats.rs  json_value.json  main.rs  test_data_percentiles_1.json  test_data_term_agg.json  test_struct.rs  test_struct_agg1.rs  test_struct_agg2.rs
