[package]
name = "test_serde_formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bincode = "1.3.3"
bitcode = "0.1.0"
bson = "2.6.1"
ciborium = "0.2.0"
measure_time = "0.8.2"
minicbor = "0.19.1"
postcard = { version = "1.0.4", features = ["alloc"] }
prettytable-rs = "0.10.0"
rmp-serde = "1.1.1"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
sketches-ddsketch = { version = "0.2.1", features = ["use_serde"] }
